k8s/b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-deploy
  namespace: pspd
spec:
  replicas: 1
  selector: { matchLabels: { app: b } }
  template:
    metadata: 
      labels: 
        app: b
        version: v1
    spec:
      containers:
        - name: b
          image: b-service:local
          imagePullPolicy: IfNotPresent
          ports: 
            - { containerPort: 50052, name: grpc }
            - { containerPort: 9102, name: metrics }
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe: { tcpSocket: { port: 50052 }, initialDelaySeconds: 2, periodSeconds: 5 }
          livenessProbe:  { tcpSocket: { port: 50052 }, initialDelaySeconds: 5, periodSeconds: 10 }
---
apiVersion: v1
kind: Service
metadata:
  name: b-svc
  namespace: pspd
  labels:
    app: b
spec:
  selector: { app: b }
  ports: 
    - { port: 50052, targetPort: 50052, name: grpc }
    - { port: 9102, targetPort: 9102, name: metrics }
